@@ -1,3 +1,8 @@
+Wed Sep  5 19:48:34 2001  Priyanka Gontla  <pgontla@ece.uci.edu>
+
+	* ace/SOCK_Dgram.cpp (set_nic): 
+	  Fixed the errors that raised in Win.
+
 Wed Sep  5 20:38:10 2001  Balachandran Natarajan  <bala@cs.wustl.edu>
 
 	* ace/OS.h:
